[package]
name = "halo2"
version = "0.1.0-beta.1"
authors = [
    "Sean Bowe <sean@electriccoin.co>",
    "Ying Tong Lai <yingtong@electriccoin.co>",
    "Daira Hopwood <daira@electriccoin.co>",
    "Jack Grigg <jack@electriccoin.co>",
]
edition = "2018"
description = """
[BETA] Fast proof-carrying data implementation with no trusted setup
"""
license-file = "COPYING"
repository = "https://github.com/zcash/halo2"
documentation = "https://docs.rs/halo2"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "plonk"
harness = false

[dependencies]
backtrace = { version = "0.3", optional = true }
rayon = "1.5.1"
ff = "0.11"
group = "0.11"
rand = "0.8"
blake2b_simd = "0.5"
# pairing = { path = '../pairing', package = "pairing_bn256" }
pairing = { git = 'https://github.com/appliedzkp/pairing', package = "pairing_bn256", branch = "introduce-assembly-complete", features = ["asm"] }
rand_core = { version = "0.6", default-features = false }
subtle = "2.3"

# Developer tooling dependencies
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }

[dev-dependencies]
assert_matches = "1.5"
criterion = "0.3"
gumdrop = "0.8"
proptest = "1"
rand_xorshift = "0.3"

[features]
dev-graph = ["plotters", "tabbycat"]
gadget-traces = ["backtrace"]
sanity-checks = []
asm = ["pairing/asm"]

[[example]]
name = "circuit-layout"
required-features = ["dev-graph"]
